# experiments-and-learning

./: EclipseSettings.epf  LICENSE  README.md
OpenGLLearning/: .cproject  .project  CMakeLists.txt
OpenGLLearning/include/: CDualQuaternion.hpp  CGLCamera.hpp  CGLLight.hpp  CGLShader.hpp  CQuaternion.hpp  CReal.hpp  CVector3.hpp  GLGeometry.h  GLPointCloud.h  GLPrimitives.h  Material.hpp  Transform.h
OpenGLLearning/include/physics/: CPositionBasedDynamics.h  physics.h
OpenGLLearning/include/physics/triangle_intersection/: Devillers2006.hpp  Moller1997.hpp  Tropp2006.hpp
OpenGLLearning/include/primitives/: CCameraShape.h  CParticleSystem.h  CParticleSystemSpheres.h  CReferenceFrame.h  CSolidArrow.h  CSolidBox.h  CSolidCapsule.h  CSolidCone.h  CSolidCylinder.h  CSolidSphere.h  GLPointCloud.h  GLPrimitives.h
OpenGLLearning/shaders/: constraintVisualization.frag  constraintVisualization.vs  indicesTextureColorNormal.frag  indicesTextureColorNormal.geom  indicesTextureColorNormal.vs  normalVisualization.geom  normalVisualization.vs  pointCloudVisualization.frag  pointCloudVisualization.vs
OpenGLLearning/src/: OpenGLLearning.cpp
PBD/: CMakeLists.txt
PBD/include/: CVector3.hpp  Common.h
PBD/include/physics/: CConstraint.hpp  CParticle.hpp  CParticleSystem.h  CPositionBasedDynamics.h  CWorld.h
PBD/src/: main.cpp
ParticlePhysicsEngine/: .cproject  .project
ParticlePhysicsEngine/include/: CParticle.h  CPhysicsEngine.hpp  CVector3.hpp
Vector3Testing/: .cproject  .project  CMakeLists.txt
Vector3Testing/src/: CVector3.hpp  main.cpp
VegaFEMLearning/: .cproject  .project
VegaFEMLearning/src/: main.cpp
robot_spherical_model/: CMakeLists.txt
robot_spherical_model/include/robot_spherical_model/: RobotSphericalModel.h
robot_spherical_model/src/: RobotSphericalModel.cpp
